--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5de52fe5-7e74-43bc-8b5e-a29f6c1dbaf6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4d236e9a-672f-4122-af6c-d634c0d2de11",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a296d7e5-2894-49a4-a92b-638b9edeeae1",
    "metadata": {},
    "outputs": [],
@@ -64,6 +64,21 @@
     "    df = test.copy()\n",
     "    df[\"value\"] = np.where(df[\"stereotype\"] == 1, \"Stereotype\", \"NoStereotype\")\n",
     "    df[[\"test_case\", \"id\", \"value\"]].to_json(f\"data/{name}_t1_hard.json\", orient=\"records\", indent=4)\n",
+    "\n",
+    "    if name == \"test\":\n",
+    "        # T1 HARD - detests\n",
+    "        df = test.copy()\n",
+    "        df[\"value\"] = np.where(df[\"stereotype\"] == 1, \"Stereotype\", \"NoStereotype\")\n",
+    "        df[df.source == \"detests\"][[\"test_case\", \"id\", \"value\"]].to_json(\n",
+    "            f\"data/{name}-detests_t1_hard.json\", orient=\"records\", indent=4\n",
+    "        )\n",
+    "\n",
+    "        # T1 HARD - stereohoax\n",
+    "        df = test.copy()\n",
+    "        df[\"value\"] = np.where(df[\"stereotype\"] == 1, \"Stereotype\", \"NoStereotype\")\n",
+    "        df[df.source == \"stereohoax\"][[\"test_case\", \"id\", \"value\"]].to_json(\n",
+    "            f\"data/{name}-stereohoax_t1_hard.json\", orient=\"records\", indent=4\n",
+    "        )\n",
     "\n",
     "    # T2 HARD\n",
     "    df = test.copy()\n",
@@ -94,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8d2097da-f07e-422c-9d54-0f159be9d377",
    "metadata": {},
    "outputs": [],
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d1362b76-41e7-481d-b8ba-b94cf2e0dfe7",
    "metadata": {},
    "outputs": [],
@@ -124,17 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3aa7828a-2d90-47c5-93d1-a1580073fbb9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## When the test solutions are available\n",
-    "# test = pd.read_csv(\"data/test_solutions.csv\")\n",
-    "# test[\"stereotype_soft\"] = test[[\"stereotype_a1\", \"stereotype_a2\", \"stereotype_a3\"]].mean(axis=1)\n",
-    "# test[\"implicit_soft\"] = test[[\"implicit_a1\", \"implicit_a2\", \"implicit_a3\"]].mean(axis=1)\n",
+    "test = pd.read_csv(\"data/test_solutions.csv\")\n",
+    "test[\"stereotype_soft\"] = test[[\"stereotype_a1\", \"stereotype_a2\", \"stereotype_a3\"]].mean(axis=1)\n",
+    "test[\"implicit_soft\"] = test[[\"implicit_a1\", \"implicit_a2\", \"implicit_a3\"]].mean(axis=1)\n",
     "\n",
-    "# test_to_json(test, \"test\")"
+    "test_to_json(test, \"test\")"
    ]
   },
   {
@@ -149,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1c13e2d9-70bf-48f6-9d70-306effd1d97a",
    "metadata": {},
    "outputs": [],
@@ -186,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "379b5c74-af14-4adc-92e4-55d2ed51fe4e",
    "metadata": {},
    "outputs": [],
@@ -205,6 +219,9 @@
     "\n",
     "for file in glob.glob(\"baselines/test/*_t1_hard.csv\"):\n",
     "    json_t1_hard(file)\n",
+    "    \n",
+    "json_t1_hard(\"baselines/test/beto_t1_hard_detests.csv\")\n",
+    "json_t1_hard(\"baselines/test/beto_t1_hard_stereohoax.csv\")\n",
     "\n",
     "for file in glob.glob(\"baselines/test/*_t2_hard.csv\"):\n",
     "    json_t2_hard(file)\n",
@@ -226,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "770961ea-8ebe-48a6-9385-33f0848e4b91",
    "metadata": {},
    "outputs": [],
@@ -244,37 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "947fb4bf-afa3-44bf-a534-bb9a8beaf284",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-04-17 17:45:10,551 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
-      "2024-04-17 17:45:10,560 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
-      "2024-04-17 17:45:10,562 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
-      "2024-04-17 17:45:10,562 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n",
-      "Task 1 Hard Labels {'F1': 0.8}\n",
-      "2024-04-17 17:45:10,563 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['CrossEntropy']\n",
-      "2024-04-17 17:45:10,567 - pyevall.metrics.metrics - INFO -             evaluate() - Executing Cross Entropy evaluation method\n",
-      "Task 1 Soft Labels {'Cross Entropy': 1.5808285223439784}\n",
-      "2024-04-17 17:45:10,568 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICMSoft', 'ICMSoftNorm']\n",
-      "2024-04-17 17:45:10,573 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-17 17:45:10,576 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM-Soft Normalized evaluation method\n",
-      "2024-04-17 17:45:10,576 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-17 17:45:10,579 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "Task 2 Hard Labels {'ICM Soft': -10.576490286434076, 'ICM Soft Norm': 0}\n",
-      "2024-04-17 17:45:10,582 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
-      "2024-04-17 17:45:10,586 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 17:45:10,587 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
-      "2024-04-17 17:45:10,587 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 17:45:10,588 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "Task 2 Soft Labels {'ICM': -2.9605947323337506e-16, 'ICM Norm': 0.49999999999999983}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
@@ -289,31 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b6ac8c7d-b580-4818-a2f7-06150282c290",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-04-17 17:45:11,903 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
-      "2024-04-17 17:45:11,970 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
-      "2024-04-17 17:45:12,220 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
-      "2024-04-17 17:45:12,221 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'F1': 0.27698185291308497}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred = \"baselines/validation/tfidf_svc_t1_hard.json\"\n",
     "gold = \"data/validation_t1_hard.json\"\n",
@@ -322,32 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "278ad914-f4d0-4657-aabc-76f6189117c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-04-17 17:45:13,255 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
-      "2024-04-17 17:45:13,322 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 17:45:13,564 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
-      "2024-04-17 17:45:13,564 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 17:45:13,807 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'ICM': 0.04972717204505462, 'ICM Norm': 0.5223741437225744}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred = \"baselines/validation/tfidf_svc_t2_hard.json\"\n",
     "gold = \"data/validation_t2_hard.json\"\n",
