--- a/beto_baselines.ipynb
+++ b/beto_baselines.ipynb
@@ -63,20 +63,19 @@
    "outputs": [],
    "source": [
     "model_id = \"dccuchile/bert-base-spanish-wwm-cased\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)"
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "MAX_TOKENS = 128"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1f6fa1e0-25d3-4cfc-b1ec-c60d100dde99",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(examples):\n",
-    "    tokenized_inputs = tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=128)\n",
+    "    tokenized_inputs = tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=MAX_TOKENS)\n",
     "    return tokenized_inputs\n",
     "\n",
     "\n",
@@ -129,31 +128,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43e00f5-bb51-4189-b71b-1157fb98a18f",
+   "id": "27672db0-6213-4898-8c4b-8fb52a42c567",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tok_train = preprocessing_data(train[[\"text\", \"stereotype\"]].rename(columns={\"stereotype\": \"labels\"}))\n",
-    "tok_val = preprocessing_data(validation[[\"text\", \"stereotype\"]].rename(columns={\"stereotype\": \"labels\"}))\n",
-    "tok_test = preprocessing_data(test[[\"text\"]])"
+    "def data_t1_hard(source=\"all\"):\n",
+    "    if source != \"all\":\n",
+    "        _train = train[train.source == source]\n",
+    "        _val = validation[validation.source == source]\n",
+    "        _test = test[test.source == source]\n",
+    "    else:\n",
+    "        _train = train\n",
+    "        _val = validation\n",
+    "        _test = test\n",
+    "\n",
+    "    tok_train = preprocessing_data(_train[[\"text\", \"stereotype\"]].rename(columns={\"stereotype\": \"labels\"}))\n",
+    "    tok_val = preprocessing_data(_val[[\"text\", \"stereotype\"]].rename(columns={\"stereotype\": \"labels\"}))\n",
+    "    tok_test = preprocessing_data(_test[[\"text\"]])\n",
+    "    return _test, tok_train, tok_val, tok_test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f263f2-a8c6-4043-a925-b3d4044897e5",
+   "id": "0c1a8ba4-028e-4510-9d46-e5bccc176ec7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_deterministic()\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_id, num_labels=2)\n",
-    "trainer = Trainer(model=model, args=training_args, train_dataset=tok_train, eval_dataset=tok_val)\n",
-    "trainer.train()\n",
+    "def train_t1_hard(source=\"all\"):\n",
+    "    set_deterministic()\n",
+    "    _test, tok_train, tok_val, tok_test = data_t1_hard(source)\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(model_id, num_labels=2)\n",
+    "    trainer = Trainer(model=model, args=training_args, train_dataset=tok_train, eval_dataset=tok_val)\n",
+    "    trainer.train()\n",
     "\n",
-    "predictions = trainer.predict(tok_test)\n",
-    "results = test[[\"id\"]].copy()\n",
-    "results[\"stereotype\"] = np.argmax(predictions[0], axis=1)\n",
-    "results.to_csv(\"baselines/test/beto_t1_hard.csv\", index=False)"
+    "    predictions = trainer.predict(tok_test)\n",
+    "    results = _test[[\"id\"]].copy()\n",
+    "    results[\"stereotype\"] = np.argmax(predictions[0], axis=1)\n",
+    "    suffix = \"\" if source == \"all\" else f\"_{source}\"\n",
+    "    results.to_csv(f\"baselines/test/beto_t1_hard{suffix}.csv\", index=False)\n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c344ff70-d681-4cbc-8fab-9adb01a9854a",
+   "metadata": {},
+   "source": [
+    "Extra baseline with one model for each source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4b00009-e603-4ba7-a574-2906455e8e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_t1_hard(\"detests\")\n",
+    "train_t1_hard(\"stereohoax\")\n",
+    "pd.concat(\n",
+    "    [pd.read_csv(\"baselines/test/beto_t1_hard_stereohoax.csv\"), pd.read_csv(\"baselines/test/beto_t1_hard_detests.csv\")]\n",
+    ").to_csv(\"baselines/test/beto_2_models_t1_hard.csv\", index=False)"
    ]
   },
   {
@@ -161,7 +197,7 @@
    "id": "a1905ead-6509-433c-92f8-50a49facf8a2",
    "metadata": {},
    "source": [
-    "Save the result to the test DataFrame to filter it in task 2"
+    "Standard fine-tuning with full data. Save the result to the test DataFrame to filter it in task 2"
    ]
   },
   {
@@ -171,6 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_t1_hard()\n",
     "test[\"stereotype_pred\"] = np.argmax(predictions[0], axis=1)"
    ]
   },
@@ -342,8 +379,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
